paper_experimental_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/array_decl_1/sample_002/target.compile.log
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `lazy_static`
 --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/array_decl_1/sample_002/target.rs:3:1
  |
3 | lazy_static::lazy_static! {
  | ^^^^^^^^^^^ use of unresolved module or unlinked crate `lazy_static`

error[E0425]: cannot find value `CALLS` in this scope
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/array_decl_1/sample_002/target.rs:11:6
   |
11 |     *CALLS.lock().unwrap() += 1;
   |      ^^^^^ not found in this scope

error[E0425]: cannot find value `FA` in this scope
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/array_decl_1/sample_002/target.rs:21:22
   |
21 |         let mut fa = FA.lock().unwrap();
   |                      ^^ not found in this scope

error[E0425]: cannot find value `BACKING` in this scope
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/array_decl_1/sample_002/target.rs:27:27
   |
27 |         let mut backing = BACKING.lock().unwrap();
   |                           ^^^^^^^ not found in this scope

error[E0425]: cannot find value `AFP` in this scope
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/array_decl_1/sample_002/target.rs:28:23
   |
28 |         let mut afp = AFP.lock().unwrap();
   |                       ^^^ not found in this scope

error[E0425]: cannot find value `FA` in this scope
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/array_decl_1/sample_002/target.rs:65:18
   |
65 |         let fa = FA.lock().unwrap();
   |                  ^^ not found in this scope

error[E0425]: cannot find value `AFP` in this scope
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/array_decl_1/sample_002/target.rs:72:19
   |
72 |         let afp = AFP.lock().unwrap();
   |                   ^^^ not found in this scope

error[E0425]: cannot find value `FA` in this scope
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/array_decl_1/sample_002/target.rs:86:22
   |
86 |             let fa = FA.lock().unwrap();
   |                      ^^ not found in this scope

error[E0425]: cannot find value `AFP` in this scope
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/array_decl_1/sample_002/target.rs:93:23
   |
93 |             let afp = AFP.lock().unwrap();
   |                       ^^^ not found in this scope

error[E0425]: cannot find value `CALLS` in this scope
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/array_decl_1/sample_002/target.rs:99:13
   |
99 |         if *CALLS.lock().unwrap() != 2 {
   |             ^^^^^ not found in this scope

error[E0599]: no method named `try_into` found for slice `[f32]` in the current scope
   --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/array_decl_1/sample_002/target.rs:128:35
    |
128 |         if takes_params(&vla1[..].try_into().unwrap(), &afp2_array) !=
    |                                   ^^^^^^^^
    |
   ::: /Users/arielkellison/.rustup/toolchains/nightly-2025-09-10-aarch64-apple-darwin/lib/rustlib/src/rust/library/core/src/convert/mod.rs:622:8
    |
622 |     fn try_into(self) -> Result<T, Self::Error>;
    |        -------- the method is available for `[f32]` here
    |
    = help: items from traits can only be used if the trait is in scope
    = note: 'std::convert::TryInto' is included in the prelude starting in Edition 2021
help: trait `TryInto` which provides `try_into` is implemented but not in scope; perhaps you want to import it
    |
  1 + use std::convert::TryInto;
    |
help: there is a method `into` with a similar name
    |
128 -         if takes_params(&vla1[..].try_into().unwrap(), &afp2_array) !=
128 +         if takes_params(&vla1[..].into().unwrap(), &afp2_array) !=
    |

error[E0277]: the trait bound `Arc<std::sync::Mutex<f32>>: Copy` is not satisfied
   --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/array_decl_1/sample_002/target.rs:123:31
    |
123 |         let mut afp2_array = [Arc::new(Mutex::new(0.0)); 17];
    |                               ^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Copy` is not implemented for `Arc<std::sync::Mutex<f32>>`
    |
    = note: the `Copy` trait is required because this value will be copied for each element of the array
    = help: consider using `core::array::from_fn` to initialize the array
    = help: see https://doc.rust-lang.org/stable/std/array/fn.from_fn.html for more information

error: aborting due to 12 previous errors

Some errors have detailed explanations: E0277, E0425, E0433, E0599.
For more information about an error, try `rustc --explain E0277`.